--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.11.2" }
-bevy_mod_picking = { version = "0.15.0" }
+bevy_egui = "0.21.0"
+bevy_mod_picking = { version = "0.15.0", features = ["backend_egui"] }
 bevy_pancam = "0.9.0"
 lazy_static = "1.4.0"
 
