--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,9 @@ jobs:
 
     steps:
     - name: Update APT
-      run: apt-get -y update
+      run: sudo apt-get -y update
     - name: Install Dependencies
-      run: apt-get -y install mold
+      run: sudo apt-get -y install mold
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
