--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,10 @@ jobs:
     - name: Install Dependencies
       run: sudo apt-get -y install mold libx11-dev libasound2-dev libudev-dev
     - uses: actions/checkout@v3
+
+    - run: rustup toolchain install stable --profile minimal
+    - uses: Swatinem/rust-cache@v2
+      
     - name: Build
       run: cargo build --verbose
     - name: Run tests
