--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ bevy = { version = "0.11.2" }
 bevy_egui = "0.21.0"
 bevy_mod_picking = { version = "0.15.0", features = ["backend_egui"] }
 bevy_pancam = "0.9.0"
+env_logger = "0.10.0"
 lazy_static = "1.4.0"
+log = "0.4.20"
 
 # Enable a small amount of optimization in debug mode
 # [profile.dev]
