--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,10 @@ jobs:
 
     - name: rust-clippy-check
       uses: actions-rs/clippy-check@v1.0.7
-      
+      with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
+
     - name: Build
       run: cargo build --verbose
     - name: Run tests
