--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.11.2" }
 bevy_egui = "0.21.0"
-bevy_mod_outline = "0.5.0"
+bevy_mod_outline = "0.5.0"                                             # Maybe switch back to custom version and try to get it working
 bevy_mod_picking = { version = "0.15.0", features = ["backend_egui"] }
 bevy_mod_reqwest = "0.11.1"
 bevy_pancam = "0.9.0"
