--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,23 @@ name = "hexalon"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.11.3" }
-bevy_egui = "0.22.0"
-bevy_mod_picking = { version = "0.15.0", features = ["backend_egui"] }
-bevy_mod_reqwest = "0.11.2"
-bevy_pancam = "0.9.0"
+bevy = { version = "0.12.1" }
+bevy_egui = "0.24.0"
+bevy_mod_picking = { version = "0.17.0", features = ["backend_egui"] }
+# bevy_mod_reqwest = "0.11.2"
+bevy_pancam = "0.10.0"
 env_logger = "0.10.0"
 futures-lite = "2.0.1"
 lazy_static = "1.4.0"
 log = "0.4.20"
 serde = { version = "1.0.192", features = ["derive"] }
+wasm-bindgen = "0.2"
 
 # Enable a small amount of optimization in debug mode
 # [profile.dev]
@@ -24,3 +28,6 @@ serde = { version = "1.0.192", features = ["derive"] }
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+[profile.release]
+opt-level = "z"
